crates/tlang_test_runner/src/snapshots/tlang_test_runner__tests__loops_for_loops_nested_loops_javascript@loops__for_loops__nested_loops.tlang.snap
---
source: crates/tlang_test_runner/src/main.rs
expression: apply_redactions(&output)
input_file: tests/loops/for_loops/nested_loops.tlang
---
[stdin]:281
                    let iterator$$0 = iterator.iter(row);
                        ^^^^^^^^^^^
Unexpected token `iterator$$0`. Expected ... , *,  (, [, :, , ?, =, an identifier, public, protected, private, readonly, <.

SyntaxError: Unexpected identifier 'iterator$$0'
    at makeContextifyScript (node:internal/vm:194:14)
    at compileScript (node:internal/process/execution:393:10)
    at evalTypeScript (node:internal/process/execution:261:22)
    at node:internal/main/eval_stdin:51:5
    at Socket.<anonymous> (node:internal/process/execution:206:5)
    at Socket.emit (node:events:519:35)
    at endReadableNT (node:internal/streams/readable:1701:12)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21)

Node.js v24.0.2
